# tom-language

./: README.md  final  final.cpp  id  id.cpp  source.tom  tom_transpiler
compiler/: CMakeLists.txt  full_pipeline.sh
compiler/.cache/clangd/index/: main.cpp.3918B29E2BD3CBD8.idx  tokenizer.cpp.94EEBD6E037DBE7A.idx  tokenizer.hpp.812232353A99B280.idx
compiler/include/: code_gen.hpp  parser.hpp  tokenizer.hpp
compiler/src/: code_gen.cpp  main.cpp  parser.cpp  tokenizer.cpp
transpiler/: source  source.tom  tom.sh  tom_transpiler  tom_transpiler.cpp
